--- a/web.html
+++ b/web.html
@@ -2,23 +2,34 @@
 <html>
    <head>
       <title>Leaflet sample</title>
-      <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-      <script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+      crossorigin=""/>
+      <!-- Make sure you put this AFTER Leaflet's CSS -->
+      <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+      crossorigin=""></script>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
    </head>
 
    <body>
-      <div id = "map" style = "width: 900px; height: 580px"></div>
+      <div id = "map" style = "width: 100%; height: 600vw"></div>
       <script>
-         // Creating map options
-         var mapOptions = {
-            center: [53.407778, -113.760556],
-            zoom: 16
-         }
-         // Creating a map object
-         var map = new L.map('map', mapOptions);
-         // Creating a Layer object
-         var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-         // Adding layer to the map
-         map.addLayer(layer);
+      const map = L.map('map').fitWorld();
+      const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+         attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+      }).addTo(map);
+      function onLocationFound(e) {
+         const radius = e.accuracy / 2;
+         const locationMarker = L.marker(e.latlng).addTo(map)
+         const locationCircle = L.circle(e.latlng, radius).addTo(map);
+      }
+      function onLocationError(e) {
+         alert(e.message);
+      }
+      map.on('locationfound', onLocationFound);
+      map.on('locationerror', onLocationError);
+      map.locate({setView: true, maxZoom: 16});
       </script>
    </body>
+</html>
