--- a/live_location.html
+++ b/live_location.html
@@ -76,7 +76,7 @@
     var imageUrl = '/images/map_big.jpg';
     var errorOverlayUrl = 'https://cdn-icons-png.flaticon.com/512/110/110686.png';
     var altText = 'Image of Newark, N.J. in 1922. Source: The University of Texas at Austin, UT Libraries Map Collection.';
-    var latLngBounds = L.latLngBounds([[49.93947706, -119.3971712], [49.83947706, -119.6971712]]);
+    var latLngBounds = L.latLngBounds([[53.40926, -113.75604], [53.40884, -113.75415]]);
     var imageOverlay = L.imageOverlay(imageUrl, latLngBounds, {
         opacity: 0.8,
         errorOverlayUrl: errorOverlayUrl,
