--- a/openlayer/index.html
+++ b/openlayer/index.html
@@ -1,32 +1,226 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Geolocation</title>
-    <link rel="stylesheet" href="node_modules/ol/ol.css">
+<html>
+<head>
+    <title>Aga Khan Garden</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol/dist/ol.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@main/dist/en/v7.0.0/legacy/ol.css"/>
+    <!-- Include OpenLayers popup plugin CSS file -->
+    <link rel="stylesheet" href="ol-popup/ol-popup.css" type="text/css">
+    <link rel="stylesheet" href="popup.css" />
+    <script src="https://cdn.jsdelivr.net/npm/ol@v7.3.0/dist/ol.js"></script>
+
     <style>
-      .map {
-        width: 100%;
-        height: 400px;
-      }
+        #map {
+            width: 100%;
+            height: 100vh;
+        }
     </style>
-  </head>
-  <body>
-    <div id="map" class="map"></div>
-    <div id="info" style="display: none;"></div>
-    <label for="track">
-      track position
-      <input id="track" type="checkbox"/>
-    </label>
-    <p>
-      position accuracy : <code id="accuracy"></code>&nbsp;&nbsp;
-      altitude : <code id="altitude"></code>&nbsp;&nbsp;
-      altitude accuracy : <code id="altitudeAccuracy"></code>&nbsp;&nbsp;
-      heading : <code id="heading"></code>&nbsp;&nbsp;
-      speed : <code id="speed"></code>
-    </p>
-    <!-- Pointer events polyfill for old browsers, see https://caniuse.com/#feat=pointer -->
-    <script src="https://cdn.jsdelivr.net/npm/elm-pep@1.0.6/dist/elm-pep.js"></script>
-    <script type="module" src="main.js"></script>
-  </body>
+</head>
+
+<body>
+    <div id="map"></div>
+    <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@main/dist/en/v7.0.0/legacy/ol.js"></script>
+    <script src="ol-popup/ol-popup.js"></script>
+    <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+</body>
+
+<script>
+
+//Creates base map centred and zoomed on AKG
+var map = new ol.Map({
+    target: 'map',
+    /*layers: [
+        new ol.layer.Tile({
+            source: new ol.source.OSM()
+        })
+    ],*/
+    view: new ol.View({
+        // changes made to center the map on the page
+        center: ol.proj.fromLonLat([-113.75720, 53.40786]),
+        zoom: 18,
+        rotation: rotatemap,
+        projection: 'EPSG:3857'
+    })
+});
+
+//Rotates map based on screen size
+var rotatemap;
+var mql = [window.matchMedia("(max-width: 500px)"),window.matchMedia("(max-width: 600px)")];
+		for (var i=0; i<mql.length; i++){
+			widthChange(mql[i]) // call action function explicitly at run time
+			mql[i].addListener(widthChange); // call action function whenever each media query is triggered
+		}
+		
+		function widthChange(mq){
+			if (mql[0].matches){
+                console.log("<500");
+                rotatemap=-Math.PI / 4;
+                map.getView().setRotation(rotatemap);
+			}
+			else {
+				console.log(">500");
+                rotatemap=Math.PI / 4;
+                map.getView().setRotation(rotatemap);
+				}
+			}	
+
+//Creates AKG garden image overlay
+var bounds = ol.proj.transformExtent([-113.760125, 53.406012, -113.753870, 53.409693], 'EPSG:4326', 'EPSG:3857'); // Bounds for Aga Khan Garden, transformed to EPSG:3857
+var imageUrl = '../images/rotate3.png';
+var imageOverlayLayer = new ol.layer.Image({
+  source: new ol.source.ImageStatic({
+    url: imageUrl,
+    imageExtent: bounds
+  })
+});
+
+//Loads map and AKG garden image overlay
+map.addLayer(imageOverlayLayer);
+
+//Creates markers for AKG
+var marker1 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.7597909, 53.4074981])),
+    label: 'Entry 1'
+});
+
+var marker2 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75878,53.40695])),
+    label: 'Woodland Bagh'
+});
+var marker3 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75779,53.40658])),
+    label: 'Amphitheatre'
+});
+var marker4 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75799,53.40703])),
+    label: 'W/C'
+});
+var marker5 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75813,53.40714])),
+    label: 'Talar'
+});
+var marker6 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75735,53.40749])),
+    label: 'Chahar Bagh'
+});
+var marker7 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75778,53.40767])),
+    label: 'Jilau Khana'
+});
+var marker8 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75698,53.40722])),
+    label: 'Diwan'
+});
+var marker9 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75729,53.40784])),
+    label: 'Rose Bagh'
+});
+var marker10 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75656,53.40743])),
+    label: 'Ice Bagh'
+});
+var marker11 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75697,53.40763])),
+    label: 'Mahtabi'
+});
+var marker12 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.7556,53.40801])),
+    label: 'SE Bustan'
+});
+var marker13 = new ol.Feature({
+    geometry: new ol.geom.Point(ol.proj.fromLonLat([-113.75614,53.40865])),
+    label: 'NW Bustan'
+});
+
+var markerSource = new ol.source.Vector({
+    features: [marker1, marker2, marker3, marker4, marker5, marker6, marker7, marker8, marker9, marker10, marker11, marker12, marker13]
+});
+
+var markerLayer = new ol.layer.Vector({
+    source: markerSource,
+    style: function(feature) {
+        return new ol.style.Style({
+            image: new ol.style.Icon({
+                anchor: [0.5, 1],
+                src: 'https://openlayers.org/en/v4.6.5/examples/data/icon.png'
+            }),
+            text: new ol.style.Text({
+                text: feature.get('label'),
+                offsetY: 15,
+                font: '15px Verdana',
+                fill: new ol.style.Fill({color: '#000'}),
+                stroke: new ol.style.Stroke({color: '#fff', width: 3})
+            })
+        });
+    }
+});
+map.addLayer(markerLayer);
+
+// event listener
+
+  // Create a popup overlay
+  var popup = new Popup();
+  map.addOverlay(popup);
+
+
+  // Listen for click events on the map
+  map.on('click', function(event) {
+    map.forEachFeatureAtPixel(event.pixel, function(feature) {
+      if (feature === marker1) {
+        popup.show('hello world');
+      }
+    });
+  });
+//////////////
+
+//LIVE LOCATION ICON
+var marker = new ol.Feature();
+var markerStyle = new ol.style.Style({
+    image: new ol.style.Icon({
+        // change image on markers if desired!!!
+        // src: 'marker.png',
+        anchor: [0.5, 46],
+        anchorXUnits: 'fraction',
+        anchorYUnits: 'pixels',
+        src: 'https://openlayers.org/en/v4.6.5/examples/data/geolocation_marker.png'
+    })
+});
+var markerSource = new ol.source.Vector({
+    features: [marker]
+});
+var markerLayer = new ol.layer.Vector({
+    source: markerSource,
+    style: markerStyle
+});
+
+map.addLayer(markerLayer);
+
+
+// LIVE LOCATION TRACKING
+//var geolocation = new ol.Geolocation({
+//    trackingOptions: {
+//        enableHighAccuracy: true
+//    },
+//    projection: map.getView().getProjection()
+//});
+
+geolocation.on('change', function() {
+    var position = geolocation.getPosition();
+    if (position) {
+        var accuracy = geolocation.getAccuracy();
+        marker.setGeometry(new ol.geom.Point(position));
+        map.getView().setCenter(position);
+        map.getView().setZoom(17);
+    }
+});
+
+geolocation.setTracking(true);
+
+</script>
 </html>
