--- a/openlayerWindow/openlayerDOM/openlayer/index.html
+++ b/openlayerWindow/openlayerDOM/openlayer/index.html
@@ -23,6 +23,14 @@
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@main/dist/en/v7.0.0/legacy/ol.js"></script>
     <script src="src/ol-popup.js"></script>
 </body>
+<div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <h1>Hello!</h1>
+      <button onclick="closeModal()">Close</button>
+    </div>
+  </div>
 
 <script>
 
@@ -187,11 +195,23 @@ var popup = new Popup();
 map.addOverlay(popup);
 
 
+// the window used in this example, you could make several if you wanted, one for each marker!
+function openModal() {
+      document.getElementById('myModal').style.display = 'block';
+    }
+
+function closeModal() {
+      document.getElementById('myModal').style.display = 'none';
+    }
+
+// WINDOW AND POPUP+ WINDOW example
 // the user can add information in the popup's DOM as well
 // this means that within the popup, there could be images, text, titles and more!
 // so essentially, you can embed HTML within the popup
-// in marker 1, it is an example of how you can embed text and links/events inside a popup
-// in marker 2, it is an example of how you can embed images, text, inside a popup
+// in marker 1, this is an example of making a popup that opens another window
+// in marker 2, this is an example of opening the window directly
+
+
 map.on('singleclick', function(event) {
     map.forEachFeatureAtPixel(event.pixel, function(feature) {
     // change the info on each popup depending on the marker that was clicked
@@ -199,26 +219,16 @@ map.on('singleclick', function(event) {
       if (feature === marker1) {
         var el = document.createElement("div");
         var title = document.createElement("h2");
-        title.innerHTML = 'Close the marker1 popup?';
+        title.innerHTML = 'Open the window?';
         el.appendChild(title);
         var content = document.createElement("p");
-        content.innerHTML = '<a href="#" data-action="yes">Yes</a>, <a href="#" data-action="no">No</a>';
+        content.innerHTML = '<button onclick="openModal()">Open Window</button>';
         el.appendChild(content);
         popup.show(event.coordinate, el);
       }
-      // text and image
+      // call the window directly, no popup
       if (feature === marker2) {
-        var el = document.createElement("div");
-        var title = document.createElement("h2");
-        title.innerHTML = 'Marker two!!!!';
-        el.appendChild(title);
-        var content = document.createElement("p");
-        content.innerHTML = 'info goes here :))';
-        el.appendChild(content);
-        var image = document.createElement("p");
-        image.innerHTML = '<img src="example.jpg" alt="Example Image"width="50" height="50">';
-        el.appendChild(image);
-        popup.show(event.coordinate, el);
+        openModal();
       }
     });
 });
@@ -258,4 +268,51 @@ geolocation.on('change', function() {
 geolocation.setTracking(true);
 
 </script>
+<style>
+    /* Style for modal/window */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .modal-content {
+      background-color: #f9f9f9;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 300px;
+      text-align: center;
+    }
+
+    .close {
+      color: #888;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  </style>
+
+<!-- the modal -->
+<div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <h1>Hello!</h1>
+      <button onclick="closeModal()">Close</button>
+    </div>
+  </div>
 </html>
